@@ -9,9 +9,19 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+    jvmArgs = [
+            '-XX:+EnableDynamicAgentLoading',
+            '-Xshare:off'
+    ]
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:5.0.0'
+    testImplementation 'org.mockito:mockito-inline:5.0.0'
     implementation 'io.github.cdimascio:dotenv-java:3.2.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
 }
